edited unique key generated to avoid conflict, changed background color for visibility and rendered units

--- a/client/src/pages/BuildYourArmy/BuildYourArmy.css
+++ b/client/src/pages/BuildYourArmy/BuildYourArmy.css
@@ -3,7 +3,7 @@
   margin: 1rem;
   font-family: 'Source Serif 4', serif;
   color: white;
-  background-color: #3f3d3d;
+  background-color: var(--blue);
   border-radius: 10px;
   border: 2px solid var(--gold);
 }
